--- a/main.html
+++ b/main.html
@@ -13,8 +13,10 @@
 
 <body>
 	<form id="form1" onsubmit="getFormvalue()">
-		First name: <input type="text" name="fname"><br>
-		Last name: <input type="text" name="lname"><br>
+		<label for="fname">First name:</label>
+		<input type="text" id="fname" name="fname"><br>
+		<label for="lname">Last name:</label>
+		<input type="text" id="lname" name="lname"><br>
 		<input type="submit" value="Submit">
 	</form>
 	
